<resources>
    <string name="app_name">Bookmate Demo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginCapital">LOGIN</string>
    <string name="register">Register</string>
    <string name="registerCapital">REGISTER</string>
    <string name="already_registered">Already have an account? Login</string>
    <string name="no_account">Don\'t have an account? Register</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>